# twitter_bot

./: .gitignore  keys.py  keys.txt  last_10_pts_posts_tickers.txt  main.py  new_main.py  pyproject.toml  requirements.txt  trinomal_model_for_options.py  twitter.py  wig_comps.csv
data/: industries.json  wig_comps.csv
makro_bot/: country_continent.csv  main.py  moje_mapy.py  my_maps.py  poland_bonds.py  world_gov_bonds.py
mylogging/: __init__.py  custom_loggers.py  custom_logging.py
wig_bot/: analyst_rec.py  analysts_pts.py  dni_opcje.py  last_10_pts_posts_tickers.txt  main.py  main_na_serwer.py  option_mispricing.py  sectors.csv  trinomial_model.py  twitter.py  wig.csv  wig20_earnings.py  wig20_earnings_dates  wig20_heatmap.py  wig20_options.py  wig_heatmaps.py
