[project]
name = "twitter-bott"
version = "0.1.0"
description = "My WIG Twitter Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido==0.1.0.post1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "tweepy>=4.14.0",
    "yahooquery>=2.3.7",
    "yfinance>=0.2.51",
]
