[project]
name = "twitter-bott"
version = "0.1.0"
description = "My WIG Twitter Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly[kaleido]>=6.3.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "tweepy>=4.14.0",
    "yahooquery>=2.4.1",
    "kaleido>=0.2.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
