[project]
name = "twitter-bot"
version = "0.1.0"
description = "My Twitter Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.2.1", "pandas>=2.2.3", "python-dotenv>=1.1.1"]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]

[tool.uv.sources]
mylogging = { workspace = true }
twitter_bot_base = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/gpw_heatmaps",
    "packages/pricing_term_structure",
    "packages/mylogging",
    "packages/twitter_bot_base",
]
